fixed back to top button position on mobile

--- a/src/styles/views/hotel-detail.less
+++ b/src/styles/views/hotel-detail.less
@@ -24,6 +24,9 @@ hotel-detail {
     }
     .floating-bar-active &{
       bottom: 150px;
+      .viewport-mobile &{
+        bottom: 80px;
+      }
     }
     span{
       position: absolute;
